--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
       --sub:#6b7280;
       --line:#e5e7eb;
       --accent:#6366f1;
+
       --good:#16a34a;
       --ng:#ef4444;
+
       --shadow: 0 10px 28px rgba(0,0,0,.07);
     }
     *{ box-sizing:border-box; }
@@ -26,6 +28,7 @@
       padding:16px;
     }
     .wrap{ max-width:820px; margin:0 auto; }
+
     header{ margin:10px 0 14px; }
     h1{ font-size:28px; margin:0 0 6px; letter-spacing:.02em; }
     .lead{ margin:0; color:var(--sub); line-height:1.7; }
@@ -70,7 +73,6 @@
     .dot.good{ background:var(--good); }
     .dot.ng{ background:var(--ng); }
 
-    /* color swatch */
     .swatch{
       width:12px; height:12px; border-radius:999px;
       display:inline-block; vertical-align:middle;
@@ -79,7 +81,6 @@
       background: var(--swatch, #fff);
     }
 
-    /* toolbar */
     .toolbar{
       display:flex;
       gap:8px;
@@ -106,7 +107,6 @@
     }
     button:active{ transform: translateY(1px); }
 
-    /* calendar */
     .cal-head{
       display:flex;
       align-items:center;
@@ -164,13 +164,6 @@
       position:absolute;
       bottom:8px;
     }
-    .day .tiny{
-      position:absolute;
-      top:8px;
-      right:8px;
-      width:8px;height:8px;border-radius:999px;
-      background: rgba(0,0,0,.08);
-    }
     .kv{
       display:flex;
       justify-content:space-between;
@@ -195,6 +188,24 @@
 
     ul{ margin:10px 0 0; padding-left:18px; }
     li{ line-height:1.7; }
+
+    .titleRow{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:8px;
+      flex-wrap:wrap;
+    }
+    .fortuneBadge{
+      font-size:12px;
+      font-weight:900;
+      padding:6px 10px;
+      border-radius:999px;
+      border:1px solid var(--line);
+      background:#fff;
+      color:var(--text);
+    }
+
     footer{ margin:16px 0 6px; text-align:center; color:var(--sub); font-size:12px; }
   </style>
 </head>
@@ -203,10 +214,10 @@
   <div class="wrap">
     <header>
       <h1>運勢カレンダー 2026</h1>
-      <p class="lead">日付をタップすると、その日の「吉 / NG / ラッキーカラー / アドバイス」が日替わりで表示されます。</p>
+      <p class="lead">日付をタップすると、その日の「総合運 / 吉 / NG / ラッキーカラー / アドバイス」が日替わりで表示されます。</p>
       <div class="row" style="margin-top:10px;">
-        <span class="chip accent" id="monthThemeChip">今月のテーマ：整える</span>
-        <span class="chip" id="priorityChip">優先：対人</span>
+        <span class="chip accent" id="monthThemeChip">今月のテーマ：-</span>
+        <span class="chip" id="yearFlowChip">年の流れ：-</span>
       </div>
     </header>
 
@@ -226,7 +237,7 @@
           <div style="width:72px;"></div>
         </div>
 
-        <div class="grid" id="dowRow">
+        <div class="grid">
           <div class="dow">日</div><div class="dow">月</div><div class="dow">火</div><div class="dow">水</div><div class="dow">木</div><div class="dow">金</div><div class="dow">土</div>
         </div>
 
@@ -246,15 +257,18 @@
 
       <!-- Fortune -->
       <div class="card">
-        <h2 id="fortuneTitle">今日の運勢</h2>
+        <div class="titleRow">
+          <h2 id="fortuneTitle" style="margin:0;">今日の運勢</h2>
+          <span class="fortuneBadge" id="overallBadge">総合運：-</span>
+        </div>
 
-        <div class="box good" style="margin-bottom:10px;">
-          <div class="label"><span class="dot good"></span>吉</div>
+        <div class="box good" style="margin-top:10px; margin-bottom:10px;">
+          <div class="label"><span class="dot good"></span>吉（すると◎）</div>
           <div id="goodText">-</div>
         </div>
 
         <div class="box ng">
-          <div class="label"><span class="dot ng"></span>NG</div>
+          <div class="label"><span class="dot ng"></span>NG（しない）</div>
           <div id="ngText">-</div>
         </div>
 
@@ -270,7 +284,15 @@
           <div style="color:#6b7280;font-size:12px;margin-top:6px;" id="oneLinerText">-</div>
         </div>
 
-        <ul id="tipsList"></ul>
+        <div class="box" style="margin-top:10px;">
+          <div class="label">年の流れ（今の季節のテーマ）</div>
+          <div id="yearFlowText">-</div>
+        </div>
+
+        <div class="box" style="margin-top:10px;">
+          <div class="label">今日のミニアクション（毎日変わる）</div>
+          <ul id="tipsList"></ul>
+        </div>
       </div>
     </div>
 
@@ -288,11 +310,28 @@
       "整える","準備","始動","加速","信頼","対話","調和","回収","再構築","集中","締め","余韻"
     ];
 
-    // 週リズム：恋愛を週2回くらい混ぜる
+    // 年の流れ（季節/四半期っぽく）
+    // ※「年間通して同じ」に見えないように、月ごとに“流れ”を文章で出す
+    const yearFlowByMonth = [
+      "1月：土台づくり。生活と予定を整えるほど、後半が楽になる。",
+      "2月：芽が出る準備。小さく試して、合う形だけ残す。",
+      "3月：スタートの風。迷いは“動きながら修正”で正解になる。",
+      "4月：加速の月。決めたことを“続ける仕組み”が勝ち筋。",
+      "5月：信頼が育つ。約束と丁寧さがそのまま評価になる。",
+      "6月：対話で整う。言葉を柔らかくすると全部が進みやすい。",
+      "7月：調和と調整。頑張りすぎをやめるほど伸びる。",
+      "8月：成果の回収。やったことを形にして“受け取る”月。",
+      "9月：再構築。いらないものを捨てて、強い形に作り直す。",
+      "10月：集中。的を絞るほど、結果が出るスピードが上がる。",
+      "11月：締めと最終調整。仕上げより“詰め”が価値になる。",
+      "12月：余韻と来年準備。振り返りと感謝で運が整う。"
+    ];
+
+    // 週リズム（カテゴリ）
     // 日=心身 / 月=仕事 / 火=恋愛 / 水=対人 / 木=仕事 / 金=恋愛 / 土=自分
     const categoryByDow = ["心身","仕事","恋愛","対人","仕事","恋愛","自分"];
 
-    // カテゴリ別カラーパレット（色コード付き）
+    // カテゴリ別カラーパレット（色コード）
     const palette = {
       恋愛: [
         { name:"ローズ", hex:"#ec407a" },
@@ -326,69 +365,74 @@
       ]
     };
 
-    // 方位（簡易：日付シードで回す）
+    // 方位（簡易）
     const directions = ["北","北東","東","南東","南","南西","西","北西"];
 
-    // 文章テンプレ（カテゴリ別に増量）
+    // 総合運（大吉〜大凶）日替わり
+    const overallLevels = ["大吉","中吉","吉","小吉","末吉","凶","小凶","大凶"];
+
+    // ===== 吉/NGの文章の型を統一する =====
+    // 吉：〜すると◎
+    // NG：〜しない
     const goodByCat = {
       恋愛: [
-        "目線を合わせて話すと距離が縮まる",
-        "短い返信でも温度感が伝わる",
-        "相手のペースに寄せると愛される",
-        "会う約束は“時間”より“目的”を決めると◎",
-        "褒め言葉は一言で刺さる",
-        "今日は素直な一言が効く"
+        "目線を合わせて話すと◎",
+        "短い返信でも温度感を乗せると◎",
+        "相手のペースに合わせると◎",
+        "会う約束は“目的”を先に決めると◎",
+        "褒め言葉は一言に絞ると◎",
+        "素直な一言を先に出すと◎"
       ],
       仕事: [
-        "先に段取りを整えるほど勝ちやすい",
-        "数字を一つだけ押さえると迷いが消える",
-        "結論→理由→次の一手の順で伝えると通る",
-        "早めの確認がミスを減らす",
-        "今日は“仕上げ”より“詰め”が吉",
-        "相手の不安を先に潰すと決まりやすい"
+        "段取りを先に整えると◎",
+        "数字を一つだけ押さえて動くと◎",
+        "結論→理由→次の一手で伝えると◎",
+        "早めに確認してから進めると◎",
+        "仕上げより“詰め”を意識すると◎",
+        "相手の不安を先に潰すと◎"
       ],
       対人: [
-        "最初の挨拶が場の空気を決める",
-        "相手の言葉を1回言い換えると信頼が増える",
-        "お願いは短く、感謝は長く",
-        "返事は速さより“やわらかさ”が鍵",
-        "今日は“聞く7：話す3”が吉",
-        "紹介・つなぎ役が運を上げる"
+        "最初の挨拶を丁寧にすると◎",
+        "相手の言葉を一度言い換えると◎",
+        "お願いは短く、感謝は具体的にすると◎",
+        "返事は速さより“やわらかさ”を意識すると◎",
+        "聞く7：話す3にすると◎",
+        "紹介・つなぎ役を買って出ると◎"
       ],
       心身: [
-        "小さく休むほど後半が伸びる",
-        "水分と深呼吸で流れが戻る",
-        "体を温めると判断が冴える",
-        "散歩5分で気分が整う",
-        "今日は“無理しない”が最大の吉",
-        "目を休めるだけで集中が戻る"
+        "小さく休憩を入れると◎",
+        "水分と深呼吸を先にすると◎",
+        "体を温めてから判断すると◎",
+        "散歩5分で流れを切り替えると◎",
+        "無理をしない選択を優先すると◎",
+        "目を休めて集中を戻すと◎"
       ],
       自分: [
-        "ひとつ手放すとスペースが生まれる",
-        "好きなものを1つ選ぶと芯が立つ",
-        "整頓は運の呼吸を整える",
-        "小さな挑戦が次の扉になる",
-        "今日は“決める”より“選び直す”が吉",
-        "自分を褒める言葉を1つ用意すると強くなる"
+        "一つ手放してスペースを作ると◎",
+        "好きなものを一つ選び切ると◎",
+        "整頓を小さく始めると◎",
+        "小さな挑戦を一つ入れると◎",
+        "決めるより“選び直す”と◎",
+        "自分を褒める言葉を用意すると◎"
       ]
     };
 
     const ngByCat = {
       恋愛: [
-        "詮索しすぎない（空白も優しさ）",
-        "試すような言い方は控える",
+        "詮索しすぎない",
+        "試すような言い方をしない",
         "焦って答えを迫らない",
         "過去の話を掘り返しすぎない",
         "寂しさで連投しない",
-        "相手の反応を深読みしない"
+        "反応を深読みしすぎない"
       ],
       仕事: [
-        "勢いで即決しない（1回寝かせる）",
+        "勢いで即決しない",
         "詰めが甘いまま送信しない",
         "言い訳から入らない",
         "タスクを増やしすぎない",
-        "“全部やる”をやめる",
-        "勝ち筋の薄い案件に時間を吸われない"
+        "“全部やる”を選ばない",
+        "勝ち筋の薄い所に時間を吸われない"
       ],
       対人: [
         "噂話に乗らない",
@@ -401,7 +445,7 @@
       心身: [
         "夜更かししない",
         "空腹のまま判断しない",
-        "コーヒーで誤魔化しすぎない",
+        "カフェインで誤魔化しすぎない",
         "肩に力を入れっぱなしにしない",
         "“我慢”を美徳にしない",
         "寝不足で攻めない"
@@ -411,43 +455,44 @@
         "やる前から諦めない",
         "完璧主義に戻らない",
         "後回しで不安を増やさない",
-        "スマホ見すぎに注意",
+        "スマホ見すぎにしない",
         "自分の価値を下げる言い方をしない"
       ]
     };
 
+    // アドバイス（日替わり）
     const adviceByCat = {
       恋愛: [
-        "今日は“短く優しく”が最強。語尾を柔らかく。",
-        "会うなら「何したい？」を先に決めると濃くなる。",
-        "返信は1回深呼吸してから。温度差が消える。",
-        "甘えは一言で。長文は逆効果になりやすい日。",
-        "今日は相手を“安心させる言葉”を一つ。"
+        "今日は“安心させる言葉”を一つ。語尾を柔らかく。",
+        "温度差が出やすい日。短く優しくでOK。",
+        "会うなら目的を一つだけ決めると濃くなる。",
+        "返信は一呼吸置いてから。誤解が減る。",
+        "甘えは一言で。長文は控えめが吉。",
       ],
       仕事: [
-        "上から順にやるより「一番詰まる所」から潰す。",
-        "提案は2択にすると決まりやすい日。",
-        "今日は“確認”が売上。送る前に一度読み返す。",
-        "クロージングは“次の一歩”を具体化すると強い。",
-        "結論を先に置くと、話が一気に通る。"
+        "今日は“確認”が最強。送る前に一度読み返す。",
+        "提案は2択にすると決まりやすい。",
+        "一番詰まる所から潰すと全体が軽くなる。",
+        "結論を先に置くと話が通る。",
+        "クロージングは“次の一歩”を具体化すると強い。"
       ],
       対人: [
         "雑談は短く、要点は丁寧に。信頼が積み上がる。",
-        "相手の言葉を繰り返すだけで空気が良くなる日。",
+        "相手の言葉を一度受け取ると空気が整う。",
         "頼みごとは「いつまでに・何を」を一行で。",
-        "今日は“聞く側”に回ると情報が入る。",
-        "ありがとうを“具体的に”言うと関係が伸びる。"
+        "今日は聞く側に回ると情報が入る。",
+        "ありがとうを具体的に言うと関係が伸びる。"
       ],
       心身: [
-        "疲れのサインを早めに拾う日。5分休憩を入れる。",
+        "疲れのサインを早めに拾う日。5分休憩で回復する。",
         "温かい飲み物が吉。集中が戻りやすい。",
-        "歩く→水→深呼吸、で運の流れを整える。",
+        "歩く→水→深呼吸で流れが整う。",
         "無理な予定は削ってOK。回復が最優先。",
         "今日は“減らす”が正解。予定を1つ軽くする。"
       ],
       自分: [
         "今日は“選び直し”が吉。方向転換しても大丈夫。",
-        "小さく片づけると心が軽くなる日。",
+        "小さく片づけると心が軽くなる。",
         "やりたいことを1つだけ先にやると運が動く。",
         "自分を褒める言葉を1つ用意すると強くなる。",
         "完璧を捨てて“7割で出す”と前に進む。"
@@ -458,22 +503,100 @@
       "今日は“整える”が勝ち筋。",
       "急がなくていい。丁寧が近道。",
       "小さく動くほど運が開く。",
-      "言葉を柔らかくすると全部うまくいく。",
+      "言葉を柔らかくすると進みやすい。",
       "休むのも立派な前進。",
-      "一つだけ決めると、全部が軽くなる。"
+      "一つだけ決めると全部が軽くなる。"
     ];
 
+    // ミニアクション（カテゴリ別）→ ここを日替わりで4つ選ぶ
+    const actionsByCat = {
+      恋愛: [
+        "安心させる一言を添える",
+        "質問は1つに絞る",
+        "返信は短く優しく",
+        "相手のペースに合わせる",
+        "褒めるポイントを1つ探す",
+        "会う目的を一つ決める",
+        "深読みしそうなら一呼吸"
+      ],
+      仕事: [
+        "最重要を1つだけ終わらせる",
+        "送信前に読み返す",
+        "確認を先に取る",
+        "結論→理由→次の一手で話す",
+        "2択で提案する",
+        "詰まる所から潰す",
+        "やらないことを1つ決める"
+      ],
+      対人: [
+        "最初の挨拶を丁寧にする",
+        "相手の言葉を言い換えて返す",
+        "感謝を具体的に言う",
+        "聞く7：話す3を意識",
+        "お願いは一行で伝える",
+        "否定より質問で返す",
+        "場の空気を整える一言"
+      ],
+      心身: [
+        "水分を先に取る",
+        "5分だけ目を休める",
+        "肩の力を抜く深呼吸",
+        "温かい飲み物を選ぶ",
+        "散歩5分で切り替える",
+        "予定を1つ軽くする",
+        "夜更かししない準備をする"
+      ],
+      自分: [
+        "小さく片づける（1分）",
+        "やることを1つだけ決める",
+        "好きなものを1つ選ぶ",
+        "比較をやめて自分の基準へ戻す",
+        "7割で出す（完璧を捨てる）",
+        "小さな挑戦を1つ入れる",
+        "手放すものを1つ決める"
+      ]
+    };
+
     // ===== 便利関数 =====
-    function pad2(n){ return String(n).padStart(2, "0"); }
-    function fmtDateJP(d){
-      const w = ["日","月","火","水","木","金","土"][d.getDay()];
-      return `${d.getFullYear()}年${d.getMonth()+1}月${d.getDate()}日（${w}）`;
-    }
     function dayOfYear(date){
       const start = new Date(date.getFullYear(), 0, 1);
       return Math.floor((date - start) / 86400000); // 0..364
     }
     function pick(arr, seed){ return arr[seed % arr.length]; }
+    function fmtDateJP(d){
+      const w = ["日","月","火","水","木","金","土"][d.getDay()];
+      return `${d.getFullYear()}年${d.getMonth()+1}月${d.getDate()}日（${w}）`;
+    }
+
+    function computeOverall(date){
+      // 日替わりで大吉〜大凶（偏りすぎないように、月/日/曜日/通し番号で混ぜる）
+      const doy = dayOfYear(date);
+      const m = date.getMonth();
+      const d = date.getDate();
+      const w = date.getDay();
+      const score = (doy * 7 + m * 13 + d * 3 + w * 11) % 100;
+
+      // 0..99 を 8段階に割り当て（大吉が少し出やすい/出にくいを調整したければここ）
+      const idx = Math.floor(score / 12.5); // 0..7
+      return overallLevels[Math.min(7, idx)];
+    }
+
+    function makeTips(category, date){
+      // 毎日変わる4つを生成（カテゴリ内の配列から、重複しないように選ぶ）
+      const base = actionsByCat[category];
+      const doy = dayOfYear(date);
+      const m = date.getMonth();
+      const d = date.getDate();
+
+      const picks = new Set();
+      let i = 0;
+      while (picks.size < 4 && i < 50){
+        const seed = doy + m*17 + d*31 + i*7;
+        picks.add(base[seed % base.length]);
+        i++;
+      }
+      return Array.from(picks).slice(0,4).map(t => `今日の一手：${t}`);
+    }
 
     function fortuneFor(date){
       const doy = dayOfYear(date);
@@ -483,8 +606,11 @@
 
       const category = categoryByDow[w];
       const theme = monthThemes[m];
+      const yearFlow = yearFlowByMonth[m];
+      const overall = computeOverall(date);
 
       const luckyColor = pick(palette[category], doy + m*7 + d);
+
       const good = pick(goodByCat[category], doy + 11);
       const ng   = pick(ngByCat[category], doy + 37);
       const advice = pick(adviceByCat[category], doy + 101);
@@ -492,19 +618,14 @@
 
       const direction = directions[(doy + m) % directions.length];
 
-      const tips = [
-        "今日の一手：まず1つだけ終わらせる",
-        "連絡は短くてもOK（温度感重視）",
-        "余裕がない時は“やらない”を決める",
-        "小さな整頓が運の流れを変える"
-      ];
+      const tips = makeTips(category, date);
 
-      return { theme, category, good, ng, luckyColor, direction, advice, oneLiner, tips };
+      return { theme, category, good, ng, luckyColor, direction, advice, oneLiner, tips, yearFlow, overall };
     }
 
     // ===== UI参照 =====
     const monthThemeChip = document.getElementById("monthThemeChip");
-    const priorityChip = document.getElementById("priorityChip");
+    const yearFlowChip = document.getElementById("yearFlowChip");
 
     const monthSelect = document.getElementById("monthSelect");
     const monthTitle = document.getElementById("monthTitle");
@@ -513,7 +634,7 @@
     const selectedDateText = document.getElementById("selectedDateText");
     const directionText = document.getElementById("directionText");
 
-    const fortuneTitle = document.getElementById("fortuneTitle");
+    const overallBadge = document.getElementById("overallBadge");
     const goodText = document.getElementById("goodText");
     const ngText = document.getElementById("ngText");
     const luckyColorChip = document.getElementById("luckyColorChip");
@@ -521,6 +642,7 @@
     const themeChip = document.getElementById("themeChip");
     const adviceText = document.getElementById("adviceText");
     const oneLinerText = document.getElementById("oneLinerText");
+    const yearFlowText = document.getElementById("yearFlowText");
     const tipsList = document.getElementById("tipsList");
 
     // ===== 初期日付（今日が2026でなければ 2026/1/1） =====
@@ -541,9 +663,10 @@
     function updateFortune(d){
       const f = fortuneFor(d);
 
-      fortuneTitle.textContent = "今日の運勢";
       selectedDateText.textContent = fmtDateJP(d);
       directionText.textContent = f.direction;
+
+      overallBadge.textContent = `総合運：${f.overall}`;
 
       goodText.textContent = f.good;
       ngText.textContent = f.ng;
@@ -555,10 +678,13 @@
       adviceText.textContent = f.advice;
       oneLinerText.textContent = f.oneLiner;
 
+      yearFlowText.textContent = f.yearFlow;
+
       // top chips
       monthThemeChip.textContent = `今月のテーマ：${monthThemes[d.getMonth()]}`;
-      priorityChip.textContent = `優先：${categoryByDow[new Date(YEAR, d.getMonth(), 1).getDay()] === "恋愛" ? "恋愛" : "バランス"}`;
+      yearFlowChip.textContent = `年の流れ：${yearFlowByMonth[d.getMonth()].split("。")[0]}。`;
 
+      // tips
       tipsList.innerHTML = "";
       f.tips.forEach(t=>{
         const li = document.createElement("li");
@@ -571,9 +697,8 @@
       monthSelect.value = String(viewMonth);
       monthTitle.textContent = `${YEAR}年${viewMonth+1}月`;
 
-      // month chips
       monthThemeChip.textContent = `今月のテーマ：${monthThemes[viewMonth]}`;
-      priorityChip.textContent = `優先：${["恋愛","仕事","対人","心身","自分"][viewMonth % 5]}`;
+      yearFlowChip.textContent = `年の流れ：${yearFlowByMonth[viewMonth].split("。")[0]}。`;
 
       calGrid.innerHTML = "";
 
@@ -595,20 +720,9 @@
         cell.className = "day";
         cell.textContent = day;
 
-        // small mark if category=恋愛（ちょいヒント）
-        const f = fortuneFor(d);
-        if (f.category === "恋愛"){
-          const tiny = document.createElement("span");
-          tiny.className = "tiny";
-          tiny.style.background = "rgba(236,64,122,.18)";
-          cell.appendChild(tiny);
-        }
-
-        // today marker
         if(d.toDateString() === today.toDateString()){
           cell.classList.add("today");
         }
-        // selected
         if(d.toDateString() === selected.toDateString()){
           cell.classList.add("selected");
         }
@@ -616,7 +730,7 @@
         cell.addEventListener("click", ()=>{
           selected = d;
           updateFortune(selected);
-          renderCalendar(); // refresh highlight
+          renderCalendar();
         });
 
         calGrid.appendChild(cell);
@@ -653,7 +767,6 @@
       selected = new Date(YEAR, today.getMonth(), today.getDate());
       updateFortune(selected);
       renderCalendar();
-      // scroll to calendar top
       window.scrollTo({ top: 0, behavior:"smooth" });
     });
 
@@ -663,4 +776,3 @@
   </script>
 </body>
 </html>
-```0
